Fixed bar chart tooltip z-index so it will never be behind a bar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -449,6 +449,7 @@ body {
   .chart__bars--h .chart__bar-tooltip {
     display: none;
     position: absolute;
+    z-index: 1;
     padding: 5px;
     background: #000;
     color: #fff; }
